name:                nico-lang
version:             0.1.0.0
synopsis:            Nico-lang is the programing language of Nico Yazawa
description:         Please see README.md
homepage:            https://github.com/aiya000/nico-lang#readme
license:             MIT
license-file:        LICENSE
author:              aiya000
maintainer:          aiya000.develop@gmail.com
copyright:           aiya000
category:            Simple
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable nico-lang
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
