name:                nico-lang
version:             0.1.0.0
synopsis:            Nico-lang is the programing language of Nico Yazawa
description:         Please see README.md
homepage:            https://github.com/aiya000/nico-lang#readme
license:             MIT
license-file:        LICENSE
author:              aiya000
maintainer:          aiya000.develop@gmail.com
copyright:           aiya000
category:            Simple
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable nico-lang
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , text
  default-language:    Haskell2010
  exposed-modules:     NicoLang.Parser
                     , NicoLang.Parser.Items

executable niconvert
  hs-source-dirs:      .
  main-is:             NiConverter.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text

test-suite nico-lang-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tasty
                     , tasty-hunit
