name:                nico-lang
version:             0.1.0.0
synopsis:            Nico-lang is the programing language of Nico Yazawa
description:         Please see README.md
homepage:            https://github.com/aiya000/nico-lang#readme
license:             MIT
license-file:        LICENSE
author:              aiya000
maintainer:          aiya000.develop@gmail.com
copyright:           aiya000
category:            Simple
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable nicorun
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base >= 4.7 && < 5
                     , cmdargs
                     , nico-lang
                     , text
  other-modules:       CmdOptions

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , containers
                     , mtl
                     , text
                     , transformers
  default-language:    Haskell2010
  exposed-modules:     NicoLang.Parser
                     , NicoLang.Evaluator
                     , NicoLang.Parser.Items
                     , NicoLang.Types

executable niconvert
  hs-source-dirs:      .
  main-is:             NiConverter.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text

test-suite nico-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  other-modules:       NicoLangTest.ParserTest
  build-depends:       base
                     , easy-file
                     , extra
                     , nico-lang
                     , silently
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , text
                     , transformers
